      geda_get_widget_window macro.

    * src/functions/geda_widget.c: Include geda_gtk_compat.h and utilize macro
      geda_get_accel_group_is_locked in geda_widget_get_accel_path and macro
      geda_get_widget_window in geda_widget_set_pointer_position.

    * src/widgets/geda_accel_label.c: Utilize geda_get_widget_requisition macro.

2020-01-15 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macro geda_get_widget_requisition when
      gtk_widget_get_preferred_size is not defined, as be the case for Gtk2
      and GSEAL_ENABLE is defined.

    * src/widgets/geda_bulb.c: Remove function button_set_depressed and related
      cruft, the widget is a light bulb and never gets depressed. Revise
      geda_bulb_clicked to utilize macro geda_toggle_button_get_active.

    * src/dialogs/geda_image_chooser.c: Revise popup_activated to skip calling
      gtk_range_set_update_policy for case ZoomMode and SizeMode when Gtk3 or
      GTK_DISABLE_DEPRECATED is defined. Revise build_menu to not implement
      tooltips when Gtk3 or GTK_DISABLE_DEPRECATED is defined.

2020-01-14 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * gtk_dialog_set_has_separator (When Gtk>2)
          * geda_toggle_button_set_active (Gtk 2 & 3)

    * src/dialogs/geda_file_chooser.c: Include geda_gtk_compat.h.

    * src/dialogs/geda_image_chooser.c: Include geda_gtk_compat.h, utilize
      geda_get_widget_allocation in chooser_adjust_size. Add conditional
      directives to skip calling gtk_range_set_update_policy if Gtk+3 or
      if GTK_DISABLE_DEPRECATED is defined.

    * src/functions/geda_container.c: Revise the conditional directive in
      get_allocation_coords to handle the case when GSEAL_ENABLE is defined.
      Revise tab_compare() to utilize geda_get_widget_allocation macro.

2020-01-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/: Reluctantly include all gtk.h:

          * include/geda_bulb.h